--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GraphQL basic learning",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js --ignore client"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
